--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <h1>정원우 개씹돼지련</h1>
     <a href="image01.jpg">눌러봐</a>
     <br>
-    <h1>몸짱 개좆돼지련</h1>
+    <h1>박돼지 개좆돼지련</h1>
     <a href="image92.jpeg">눌러봐</a>
 </body>
 </html>
