new songs update

--- a/public/index.html
+++ b/public/index.html
@@ -199,6 +199,7 @@
             <td>Sid</td>
             <td class="track-length">4:13</td>
           </tr>
+//////////
           <tr onclick="playTrack(5)">
             <td>6</td>
             <td>양철의 댄스</td>
@@ -229,6 +230,7 @@
             <td>화악기 밴드</td>
             <td class="track-length">4:39</td>
           </tr>
+//////////
           <tr onclick="playTrack(10)">
             <td>11</td>
             <td>Amazing Break</td>
@@ -240,46 +242,179 @@
             <td>Depature</td>
             <td>오노 마사토시</td>
             <td class="track-length">4:16</td>
+          </tr>
           <tr onclick="playTrack(12)">
             <td>13</td>
             <td>Raison Detre</td>
             <td>Eve</td>
             <td class="track-length">3:48</td>
+          </tr>
           <tr onclick="playTrack(13)">
             <td>14</td>
             <td>Ranbu No Melody</td>
             <td>Sid</td>
             <td class="track-length">4:00</td>
-          <tr onclick="playTrack(14)">
+          </tr>
+            <tr onclick="playTrack(14)">
             <td>15</td>
             <td>Fiction</td>
             <td>Sumika</td>
             <td class="track-length">4:12</td>
+          </tr>
+//////////
           <tr onclick="playTrack(15)">
             <td>16</td>
             <td>Plasma</td>
             <td>Kenshi Yonezu</td>
             <td class="track-length">3:19</td>
+          </tr>
           <tr onclick="playTrack(16)">
             <td>17</td>
             <td>Dramaturgy</td>
             <td>Eve</td>
             <td class="track-length">3:19</td>
+          </tr>
           <tr onclick="playTrack(17)">
             <td>18</td>
             <td>Know Know Know</td>
             <td>DOES</td>
             <td class="track-length">3:20</td>
+          </tr>
           <tr onclick="playTrack(18)">
             <td>19</td>
             <td>Fatal</td>
             <td>GEMN</td>
             <td class="track-length">3:38</td>
+          </tr>
           <tr onclick="playTrack(19)">
             <td>20</td>
             <td>박수갈채가합</td>
             <td>Supercell</td>
             <td class="track-length">3:52</td>
+          </tr>
+//////////
+          <tr onclick="playTrack(20)">
+            <td>21</td>
+            <td>월광화</td>
+            <td>Janne Da Arc</td>
+            <td class="track-length">4:55</td>
+          </tr>
+          <tr onclick="playTrack(21)">
+            <td>22</td>
+            <td>Innocent Trap</td>
+            <td>Tetra-Fang</td>
+            <td class="track-length">4:44</td>
+          </tr>
+          <tr onclick="playTrack(22)">
+            <td>23</td>
+            <td>Gas Gas Gas</td>
+            <td>avex</td>
+            <td class="track-length">4:21</td>
+          </tr>
+          <tr onclick="playTrack(23)">
+            <td>24</td>
+            <td>Hello Mr My Yesterday</td>
+            <td>Hundred Percent Free</td>
+            <td class="track-length">4:28</td>
+          </tr>
+          <tr onclick="playTrack(24)">
+            <td>25</td>
+            <td>Only My Railgun</td>
+            <td>Yoshino Nanjo</td>
+            <td class="track-length">4:17</td>
+          </tr>
+//////////
+          <tr onclick="playTrack(25)">
+            <td>26</td>
+            <td>Bakuchi Dancer</td>
+            <td>DOES</td>
+            <td class="track-length">2:55</td>
+          </tr>
+          <tr onclick="playTrack(26)">
+            <td>27</td>
+            <td>다움</td>
+            <td>SUPER BEAVER</td>
+            <td class="track-length">4:26</td>
+          </tr>
+          <tr onclick="playTrack(27)">
+            <td>28</td>
+            <td>심장을 바쳐라!</td>
+            <td>Revo</td>
+            <td class="track-length">5:41</td>
+          </tr>
+          <tr onclick="playTrack(28)">
+            <td>29</td>
+            <td>빛난다면</td>
+            <td>Goose house</td>
+            <td class="track-length">4:14</td>
+          </tr>
+          <tr onclick="playTrack(29)">
+            <td>30</td>
+            <td>Otonoke</td>
+            <td>Creepy Nuts</td>
+            <td class="track-length">3:15</td>
+          </tr>
+//////////
+          <tr onclick="playTrack(30)">
+            <td>31</td>
+            <td>Daten</td>
+            <td>Creepy Nuts</td>
+            <td class="track-length">2:49</td>
+          </tr>
+          <tr onclick="playTrack(31)">
+            <td>32</td>
+            <td>Again</td>
+            <td>Yui</td>
+            <td class="track-length">4:17</td>
+          </tr>
+          <tr onclick="playTrack(32)">
+            <td>33</td>
+            <td>Reason</td>
+            <td>Nami Tanaki</td>
+            <td class="track-length">4:45</td>
+          </tr>
+          <tr onclick="playTrack(33)">
+            <td>34</td>
+            <td>Sign</td>
+            <td>Flow</td>
+            <td class="track-length">3:53</td>
+          </tr>
+          <tr onclick="playTrack(34)">
+            <td>35</td>
+            <td>Dai Zero Kan</td>
+            <td>10-Feet</td>
+            <td class="track-length">4:44</td>
+          </tr>
+//////////
+          <tr onclick="playTrack(35)">
+            <td>36</td>
+            <td>Memoria</td>
+            <td>Eir Aoi</td>
+            <td class="track-length">4:52</td>
+          </tr>
+          <tr onclick="playTrack(36)">
+            <td>37</td>
+            <td>Eternal Blaze</td>
+            <td>Nana Mizuki</td>
+            <td class="track-length">5:07</td>
+          </tr>
+          <tr onclick="playTrack(37)">
+            <td>38</td>
+            <td>Shangri-La</td>
+            <td>Angela</td>
+            <td class="track-length">4:36</td>
+          </tr>
+          <tr onclick="playTrack(38)">
+            <td>39</td>
+            <td>Golden Time Lover</td>
+            <td>Sukima Switch</td>
+            <td class="track-length">5:39</td>
+          </tr>
+          <tr onclick="playTrack(39)">
+            <td>40</td>
+            <td>잔혹한 천사의 테제</td>
+            <td>Yoko Takahashi</td>
+            <td class="track-length">4:05</td>
           </tr>
         </tbody>
       </table>
@@ -326,6 +461,7 @@
       {src:'songs/죠죠.mp3', title:'Bloody Stream', artist:'Coda', duration:'4:21'},
       {src:'songs/칠대죄.mp3', title:'열정의 스펙트럼', artist:'이키모노가카리', duration:'3:55'},
       {src:'songs/천본앵.mp3', title:'천본앵', artist:'화악기 밴드', duration:'4:39'},
+
       {src:'songs/테라포마스.mp3', title:'Amazing Break', artist:'terraspex', duration:'3:55'},
       {src:'songs/헌터헌터.mp3', title:'Depature', artist:'오노 마사토시', duration:'4:16'},
       {src:'songs/레종.mp3', title:'Raison Detre', artist:'Eve', duration:'3:48'},
@@ -335,7 +471,29 @@
       {src:'songs/드라마투르기.mp3', title:'Dramaturgy', artist:'Eve', duration:'3:19'},
       {src:'songs/은혼.mp3', title:'Know Know Know', artist:'DOES', duration:'3:20'},
       {src:'songs/파탈.mp3', title:'Fatal', artist:'GEMN', duration:'3:38'},
-      {src:'songs/박수갈채가합.mp3', title:'박수갈채가합', artist:'Supercell', duration:'3:52'}
+      {src:'songs/박수갈채가합.mp3', title:'박수갈채가합', artist:'Supercell', duration:'3:52'},
+
+      {src:'songs/월광화.mp3', title:'월광화', artist:'Janne Da Arc', duration:'4:55'},
+      {src:'songs/이노센트트랩.mp3', title:'Innocent Trap', artist:'Tetra-Fang', duration:'4:44'},
+      {src:'songs/가스가스.mp3', title:'Gas Gas Gas', artist:'avex', duration:'4:21'},
+      {src:'songs/헬로마이.mp3', title:'Hello Mr My Yesterday', artist:'Hundred Percent Free', duration:'4:28'},
+      {src:'songs/레일건.mp3', title:'Only My Railgun', artist:' Yoshino Nanjo', duration:'4:17'},
+      {src:'songs/도박댄서.mp3', title:'Bakuchi Dancer', artist:'DOES', duration:'2:55'},
+      {src:'songs/다움.mp3', title:'다움', artist:'SUPER BEAVER', duration:'4:26'},
+      {src:'songs/심장을바쳐라.mp3', title:'심장을 바쳐라!', artist:'Revo', duration:'5:41'},
+      {src:'songs/빛난다면.mp3', title:'빛난다면', artist:'Goose house', duration:'4:14'},
+      {src:'songs/단다단.mp3', title:'Otonoke', artist:'Creepy Nuts', duration:'3:15'},
+
+      {src:'songs/타천.mp3', title:'Daten', artist:'Creepy Nuts', duration:'2:49'},
+      {src:'songs/어게인.mp3', title:'Again', artist:'Yui', duration:'4:17'},
+      {src:'songs/리즌.mp3', title:'Reason', artist:'Nami Tanaki', duration:'4:45'},
+      {src:'songs/사인.mp3', title:'Sign', artist:'Flow', duration:'3:53'},
+      {src:'songs/텐핏.mp3', title:'Dai Zero Kan', artist:'10-Feet', duration:'4:44'},
+      {src:'songs/메모리아.mp3', title:'Memoria', artist:'Eir Aoi', duration:'4:52'},
+      {src:'songs/이터널.mp3', title:'Eternal Blaze', artist:'Nana Mizuki', duration:'5:07'},
+      {src:'songs/샹그리라.mp3', title:'Shangri-La', artist:'Angela', duration:'4:36'},
+      {src:'songs/골타러.mp3', title:'Golden Time Lover', artist:'Sukima Switch', duration:'5:39'},
+      {src:'songs/에반게리온.mp3', title:'잔혹한 천사의 테제', artist:'Yoko Takahashi', duration:'4:05'}
     ];
     let audio = new Audio();
     let currentIndex = null;
